--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=The Library Management System for small scale library
+application.title=Intergrated Library System
+application.vendor=Mithila Prabashwara
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,10 +30,11 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/eLibraryManagementSystem.jar
+dist.jar=${dist.dir}/IntergratedLibrarySystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/eLibraryManagementSystem
+dist.jlink.output=${dist.jlink.dir}/IntergratedLibrarySystem
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-9.0.0.jar=D:\\Codespace\\lib\\Java\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
 includes=**
@@ -73,8 +76,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=eLibraryManagementSystem
-main.class=elibrarymanagementsystem.LogIn
+jlink.launcher.name=IntergratedLibrarySystem
+main.class=ILS.LogIn
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
