Fix issues and added new features

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 application.desc=The Library Management System for small scale library
 application.title=Intergrated Library System
 application.vendor=Mithila Prabashwara
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -36,12 +37,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/IntergratedLibrarySystem
 endorsed.classpath=
 excludes=
+file.reference.jcalendar_1.0.0.jar=C:\\Users\\asur1\\Downloads\\jcalendar_1.0.0.jar
 file.reference.mysql-connector-j-9.0.0.jar=D:\\Codespace\\lib\\Java\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.swingx-1.6.1.jar=C:\\Users\\asur1\\Downloads\\swingx-1.6.1.jar
+file.reference.swingx-1.6.1.jar-1=D:\\Codespace\\Java\\.lib\\swingx-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.0.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar_1.0.0.jar}:\
+    ${file.reference.swingx-1.6.1.jar}:\
+    ${file.reference.swingx-1.6.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
